--- a/fast64_internal/f3d/node_library/TileSettings_Lite.json
+++ b/fast64_internal/f3d/node_library/TileSettings_Lite.json
@@ -9,8 +9,7 @@
 			],
 			"height": 401.3333435058594,
 			"label": "Mirror or Repeat",
-			"width": 736.6666259765625,
-			"width_hidden": 100.0
+			"width": 736.6666259765625
 		},
 		"Frame": {
 			"bl_idname": "NodeFrame",
@@ -20,8 +19,7 @@
 			],
 			"height": 289.32073974609375,
 			"label": "Length - 1 to UV Space",
-			"width": 535.461669921875,
-			"width_hidden": 100.0
+			"width": 535.461669921875
 		},
 		"Math.023": {
 			"bl_idname": "ShaderNodeMath",
@@ -34,7 +32,6 @@
 				"serialized_type": "Node",
 				"name": "no idea lmao.001"
 			},
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"default_value": 0.5
@@ -71,7 +68,6 @@
 				"name": "no idea lmao.001"
 			},
 			"width": 156.3069610595703,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Value",
@@ -109,7 +105,6 @@
 				"serialized_type": "Node",
 				"name": "no idea lmao.001"
 			},
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"default_value": 0.5
@@ -141,8 +136,6 @@
 				"serialized_type": "Node",
 				"name": "no idea lmao.001"
 			},
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -172,7 +165,6 @@
 				"name": "no idea lmao.001"
 			},
 			"width": 154.559814453125,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Value",
@@ -210,7 +202,6 @@
 				"serialized_type": "Node",
 				"name": "no idea lmao.001"
 			},
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"default_value": 0.5
@@ -244,8 +235,6 @@
 				"serialized_type": "Node",
 				"name": "no idea lmao.001"
 			},
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -273,8 +262,6 @@
 				"serialized_type": "Node",
 				"name": "no idea lmao.001"
 			},
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -298,8 +285,6 @@
 				-963.9984,
 				109.5818
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -327,8 +312,6 @@
 				-963.9984,
 				178.1184
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -352,8 +335,6 @@
 				-963.9984,
 				-10.4157
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -377,8 +358,6 @@
 				-1158.3501,
 				12.0481
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -402,8 +381,6 @@
 				-1070.3024,
 				-106.4533
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -428,8 +405,6 @@
 				-106.4533
 			],
 			"label": "Mirror",
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -453,8 +428,6 @@
 				-1561.1261,
 				117.7617
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -478,8 +451,6 @@
 				-1521.8965,
 				31.9847
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -507,8 +478,6 @@
 				-1521.8965,
 				241.4473
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -532,7 +501,6 @@
 				-1323.5183,
 				330.3103
 			],
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Value",
@@ -564,8 +532,6 @@
 				-1158.3501,
 				295.3704
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -589,8 +555,6 @@
 				-1561.1261,
 				-8.3267
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -622,8 +586,6 @@
 				"serialized_type": "Node",
 				"name": "Frame"
 			},
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -652,7 +614,6 @@
 				231.4825
 			],
 			"operation": "ADD",
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"default_value": 0.5
@@ -781,7 +742,6 @@
 				"name": "Frame"
 			},
 			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"default_value": 0.5
@@ -819,7 +779,6 @@
 				"name": "Frame"
 			},
 			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"default_value": 0.5
@@ -898,8 +857,6 @@
 				-1866.7137,
 				56.1328
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -927,8 +884,6 @@
 				"serialized_type": "Node",
 				"name": "Frame"
 			},
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -956,8 +911,6 @@
 				"serialized_type": "Node",
 				"name": "Frame"
 			},
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -989,7 +942,6 @@
 				"name": "Frame"
 			},
 			"width": 125.24647521972656,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"default_value": 0.5
@@ -1027,7 +979,6 @@
 				"name": "Frame"
 			},
 			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"default_value": 0.5
@@ -1053,7 +1004,7 @@
 			}
 		}
 	},
-	"cached_hash": "7935cef68d07e9f537ad5015cd218225",
+	"cached_hash": "8b549a26c7ee472975a478d0dc8ff65f",
 	"inputs": [
 		{
 			"name": "Tex Coordinate",
