--- a/fast64_internal/f3d/node_library/Advanced_Texture_Settings_and_3_Point.json
+++ b/fast64_internal/f3d/node_library/Advanced_Texture_Settings_and_3_Point.json
@@ -15,8 +15,7 @@
 			"height": 44.99998092651367,
 			"label": "Create sample UVs for (X+1, Y) and (X, Y+1)",
 			"use_custom_color": true,
-			"width": 503.0043640136719,
-			"width_hidden": 100.0
+			"width": 503.0043640136719
 		},
 		"Frame.003": {
 			"bl_idname": "NodeFrame",
@@ -33,8 +32,7 @@
 			"label": "Get 3 Point Lerp Frac",
 			"label_size": 13,
 			"use_custom_color": true,
-			"width": 295.88427734375,
-			"width_hidden": 100.0
+			"width": 295.88427734375
 		},
 		"Reroute": {
 			"bl_idname": "NodeReroute",
@@ -42,8 +40,6 @@
 				-525.1768,
 				-198.3529
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -67,8 +63,6 @@
 				-574.6416,
 				279.4344
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -92,8 +86,6 @@
 				-550.9844,
 				258.0005
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -117,8 +109,6 @@
 				-525.1768,
 				236.4023
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -142,8 +132,6 @@
 				-429.9277,
 				-66.0522
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -171,8 +159,6 @@
 				-452.9911,
 				66.4532
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -200,8 +186,6 @@
 				-498.0605,
 				153.758
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -233,8 +217,6 @@
 				-477.3921,
 				132.5208
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -266,8 +248,6 @@
 				-346.5622,
 				-154.4249
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -295,8 +275,6 @@
 				-346.5622,
 				-132.124
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -324,8 +302,6 @@
 				-346.5622,
 				-110.1356
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -353,8 +329,6 @@
 				-346.5622,
 				-88.195
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -382,8 +356,6 @@
 				-346.5622,
 				-66.213
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -411,8 +383,6 @@
 				-346.5622,
 				-43.848
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -440,8 +410,6 @@
 				-346.5622,
 				0.4914
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -469,8 +437,6 @@
 				-346.5622,
 				66.3876
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -498,8 +464,6 @@
 				-346.5622,
 				-176.286
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -527,8 +491,6 @@
 				284.5578,
 				318.4106
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -556,8 +518,6 @@
 				-9.2238,
 				-181.2862
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -581,8 +541,6 @@
 				-31.0055,
 				-357.0798
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -606,8 +564,6 @@
 				-574.6416,
 				110.0638
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -631,8 +587,6 @@
 				-550.9844,
 				88.231
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -656,8 +610,6 @@
 				-452.9911,
 				214.2618
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -685,8 +637,6 @@
 				-429.9277,
 				191.897
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -714,8 +664,6 @@
 				-498.0605,
 				323.9492
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -908,8 +856,6 @@
 				-620.0515,
 				44.0092
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -937,8 +883,6 @@
 				-598.7181,
 				-88.0037
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -966,8 +910,6 @@
 				-477.3921,
 				302.5384
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -995,8 +937,6 @@
 				-477.5148,
 				494.3338
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1020,8 +960,6 @@
 				-111.9065,
 				494.3338
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1045,8 +983,6 @@
 				-598.8094,
 				504.9303
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1070,8 +1006,6 @@
 				-106.2716,
 				504.9303
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1095,8 +1029,6 @@
 				-429.5123,
 				516.5571
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1120,8 +1052,6 @@
 				-101.1563,
 				516.5571
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1145,8 +1075,6 @@
 				-105.0288,
 				541.4214
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1170,8 +1098,6 @@
 				-99.7,
 				551.4414
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1195,8 +1121,6 @@
 				-94.6143,
 				562.2375
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1220,8 +1144,6 @@
 				-452.9122,
 				562.2375
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1245,8 +1167,6 @@
 				-620.4841,
 				551.4414
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1270,8 +1190,6 @@
 				-498.2127,
 				541.4214
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1295,8 +1213,6 @@
 				284.5578,
 				-45.7056
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1321,7 +1237,6 @@
 				-78.5068
 			],
 			"hide": true,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "X"
@@ -1353,7 +1268,6 @@
 				-78.5068
 			],
 			"width": 141.7603302001953,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Vector"
@@ -1391,7 +1305,6 @@
 				-36.0021
 			],
 			"hide": true,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "X"
@@ -1422,8 +1335,6 @@
 				254.2271,
 				501.9275
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1447,8 +1358,6 @@
 				222.653,
 				444.0285
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1472,8 +1381,6 @@
 				222.6531,
 				-234.631
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1497,8 +1404,6 @@
 				264.8857,
 				-126.5774
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1526,8 +1431,6 @@
 				254.2271,
 				-210.7318
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1551,8 +1454,6 @@
 				849.4026,
 				318.552
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1607,8 +1508,6 @@
 				794.7209,
 				-147.0134
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1632,8 +1531,6 @@
 				821.3632,
 				-169.5363
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1657,8 +1554,6 @@
 				794.7206,
 				-45.7768
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1682,8 +1577,6 @@
 				821.3632,
 				-88.8349
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1707,7 +1600,6 @@
 				310.4663,
 				-35.4262
 			],
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Vector"
@@ -1819,8 +1711,6 @@
 				-346.5622,
 				-21.848
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1848,8 +1738,6 @@
 				-346.5622,
 				44.4054
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1877,8 +1765,6 @@
 				-346.5622,
 				22.4585
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1906,8 +1792,6 @@
 				849.4026,
 				-125.4229
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1931,8 +1815,6 @@
 				849.4026,
 				-191.6426
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1956,8 +1838,6 @@
 				-9.224,
 				400.6155
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1981,8 +1861,6 @@
 				-31.0055,
 				377.9384
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -2006,8 +1884,6 @@
 				-228.2478,
 				443.7755
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -2035,8 +1911,6 @@
 				-215.4478,
 				421.7145
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -2304,7 +2178,7 @@
 			}
 		}
 	},
-	"cached_hash": "1b4d22a2e71634027cd059c2f3006022",
+	"cached_hash": "be1f6a88fcc0805a5f6e9207d56100d6",
 	"inputs": [
 		{
 			"name": "Width",
