--- a/fast64_internal/f3d/node_library/Lite_Texture_Settings_and_3_Point.json
+++ b/fast64_internal/f3d/node_library/Lite_Texture_Settings_and_3_Point.json
@@ -15,8 +15,7 @@
 			"height": 44.99998092651367,
 			"label": "Create sample UVs for (X+1, Y) and (X, Y+1)",
 			"use_custom_color": true,
-			"width": 503.0045166015625,
-			"width_hidden": 100.0
+			"width": 503.0045166015625
 		},
 		"Frame.003": {
 			"bl_idname": "NodeFrame",
@@ -33,8 +32,7 @@
 			"label": "Get 3 Point Lerp Frac",
 			"label_size": 13,
 			"use_custom_color": true,
-			"width": 295.88427734375,
-			"width_hidden": 100.0
+			"width": 295.88427734375
 		},
 		"Reroute.014": {
 			"bl_idname": "NodeReroute",
@@ -42,8 +40,6 @@
 				-574.6416,
 				110.0638
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -67,8 +63,6 @@
 				-550.9844,
 				88.231
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -92,8 +86,6 @@
 				209.2365,
 				-45.7056
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -118,7 +110,6 @@
 				-78.5068
 			],
 			"hide": true,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "X"
@@ -150,7 +141,6 @@
 				-78.5068
 			],
 			"width": 141.7603302001953,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Vector"
@@ -188,7 +178,6 @@
 				-36.0021
 			],
 			"hide": true,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "X"
@@ -219,8 +208,6 @@
 				147.3318,
 				-234.631
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -244,8 +231,6 @@
 				189.5645,
 				-126.5774
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -273,8 +258,6 @@
 				178.9058,
 				-210.7318
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -329,8 +312,6 @@
 				719.3997,
 				-147.0134
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -354,8 +335,6 @@
 				746.0419,
 				-169.5363
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -379,8 +358,6 @@
 				774.0813,
 				-125.4229
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -404,8 +381,6 @@
 				719.3994,
 				-45.7768
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -429,8 +404,6 @@
 				746.0419,
 				-88.8349
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -454,8 +427,6 @@
 				774.0813,
 				-191.6426
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -479,7 +450,6 @@
 				235.145,
 				-35.4262
 			],
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Vector"
@@ -516,8 +486,6 @@
 				209.2366,
 				153.2448
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -545,8 +513,6 @@
 				774.0811,
 				153.3862
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -570,8 +536,6 @@
 				-156.6158,
 				99.6678
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -595,8 +559,6 @@
 				-525.1768,
 				-22.6885
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -620,8 +582,6 @@
 				-574.6416,
 				223.5192
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -645,8 +605,6 @@
 				-550.9844,
 				202.0853
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -670,8 +628,6 @@
 				-525.1768,
 				180.4871
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -695,8 +651,6 @@
 				-498.0605,
 				268.0341
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -724,8 +678,6 @@
 				-477.3921,
 				246.6233
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -753,8 +705,6 @@
 				-477.5148,
 				438.4187
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -778,8 +728,6 @@
 				-498.2127,
 				485.5062
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -803,8 +751,6 @@
 				-187.2277,
 				438.4187
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -828,8 +774,6 @@
 				-180.3501,
 				485.5062
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -853,8 +797,6 @@
 				-130.9663,
 				365.7993
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -882,8 +824,6 @@
 				178.9058,
 				407.565
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -907,8 +847,6 @@
 				147.3318,
 				349.666
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -932,8 +870,6 @@
 				-156.6158,
 				387.8604
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1013,8 +949,6 @@
 				-206.4002,
 				322.0233
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1038,8 +972,6 @@
 				-184.6187,
 				344.7003
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1063,8 +995,6 @@
 				-498.0605,
 				153.758
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1088,8 +1018,6 @@
 				-477.3921,
 				132.5208
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1113,8 +1041,6 @@
 				-368.912,
 				-118.2419
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1142,8 +1068,6 @@
 				-368.912,
 				-140.1031
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1171,8 +1095,6 @@
 				-368.912,
 				-68.5068
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1200,8 +1122,6 @@
 				-368.912,
 				-46.5068
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1229,8 +1149,6 @@
 				-368.912,
 				-92.8171
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1258,8 +1176,6 @@
 				-368.912,
 				-164.923
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1379,8 +1295,6 @@
 				-620.0024,
 				154.0267
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1408,8 +1322,6 @@
 				-620.0894,
 				-89.2291
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1433,8 +1345,6 @@
 				-597.055,
 				-162.009
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1458,8 +1368,6 @@
 				-597.18,
 				131.8081
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1487,8 +1395,6 @@
 				-130.9664,
 				1.649
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1512,8 +1418,6 @@
 				-206.4002,
 				-203.3257
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1537,8 +1441,6 @@
 				-184.6185,
 				-137.8321
 			],
-			"width": 100.0,
-			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1766,7 +1668,7 @@
 			}
 		}
 	},
-	"cached_hash": "38803cd671ae54c45fe45b720877f1e1",
+	"cached_hash": "a77a6ae5a4529a8205ac2c6065309890",
 	"inputs": [
 		{
 			"name": "Width",
